// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clicking on other tabs renders correct content and style 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  overflow-x: auto;
  white-space: nowrap;
}

.c3 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  color: inherit;
  border: none;
  background: rgba(255,255,255,0.07);
}

.c3:hover,
.c3:focus {
  cursor: pointer;
  opacity: 1;
}

.c2 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  color: inherit;
  border: none;
  background: transparent;
}

.c2:hover,
.c2:focus {
  cursor: pointer;
  opacity: 1;
}

.c4 {
  box-sizing: border-box;
  padding: 8px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  background: rgba(255,255,255,0.07);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <button
        class="c2"
      >
        tab one
      </button>
      <button
        class="c3"
      >
        tab two
      </button>
    </div>
    <div
      class="c4"
    >
      <div>
        content 2
      </div>
    </div>
  </div>
</div>
`;

exports[`init tab highlight and content 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  overflow-x: auto;
  white-space: nowrap;
}

.c2 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  color: inherit;
  border: none;
  background: rgba(255,255,255,0.07);
}

.c2:hover,
.c2:focus {
  cursor: pointer;
  opacity: 1;
}

.c3 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  color: inherit;
  border: none;
  background: transparent;
}

.c3:hover,
.c3:focus {
  cursor: pointer;
  opacity: 1;
}

.c4 {
  box-sizing: border-box;
  padding: 8px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  background: rgba(255,255,255,0.07);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <button
        class="c2"
      >
        tab one
      </button>
      <button
        class="c3"
      >
        tab two
      </button>
    </div>
    <div
      class="c4"
    >
      <div>
        content 1
      </div>
    </div>
  </div>
</div>
`;
